- Cambio de lin PROMOS a OFERTAS

--- a/views/productos.html
+++ b/views/productos.html
@@ -22,7 +22,7 @@
 					<li class="main-nav__link"><a href="../index.html">NOSOTROS</a></li>
 					<li class="main-nav__link"><a href="./productos.html">PRODUCTOS</a></li>
 					<li class="main-nav__link"><a href="./servicios.html">SERVICIOS</a></li>
-					<li class="main-nav__link"><a href="./promos.html">PROMOS</a></li>
+					<li class="main-nav__link"><a href="./promos.html">OFERTAS</a></li>
 					<li class="main-nav__link"><a href="./contacto.html">CONTACTO</a></li>
 				</ul>
 			</nav>
