--- a/views/contacto.html
+++ b/views/contacto.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="../assets/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Mr+De+Haviland&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300&family=Paytone+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <title>Contacto</title>
 </head>
 
 <body>
     <header>
 		<div class="main-nav">
-			<img src="../images/logo.png" alt="logo" width="3.5%">
+			<a href="../index.html"><img src="../images/logo.png"  class="main-nav__logo" alt="logo"></a>
 
 			<nav class="main-nav__list">
 				<ul class="main-nav__item">
@@ -21,13 +22,13 @@
 					<li class="main-nav__link"><a href="./productos.html">PRODUCTOS</a></li>
 					<li class="main-nav__link"><a href="./servicios.html">SERVICIOS</a></li>
 					<li class="main-nav__link"><a href="./promos.html">PROMOS</a></li>
-					<li class="main-nav__link"><a href="./contacto.html">CONTACTO</a></li>
+					<li class="main-nav__link"><a class="selected" href="./contacto.html">CONTACTO</a></li>
 				</ul>
 			</nav>
 		</div>
 	</header>
     
-    <section id="contacto" class="cntGeneral">
+    <section id="contacto" class="cntGeneral bg-pattern">
 		
 		<h2 class="title">Contactanos</h2>
 
@@ -89,15 +90,19 @@
                 <br>
                 <input type="reset" name="reset" value="Limpiar">
                 <input type="submit" name="submit" value="Enviar">
-    
             </fieldset>
 	</section>
     
-
-    <footer>
+	<footer class="cntFooter">
 		<span>© 2021— My Bakery Bake Page</span>
-
-		<!-- iconos de redes sociales -->
+		<div>
+			<ul class="socialMedia">
+				<li><i class="fab fa-facebook"></i></li>
+				<li><i class="fab fa-whatsapp"></i></li>
+				<li><i class="fab fa-instagram"></i></li>
+				<li><i class="fab fa-twitter-square"></i></li>
+			</ul>
+		</div>
 	</footer>
 </body>
 </html>
