--- a/views/servicios.html
+++ b/views/servicios.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Mr+De+Haviland&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300&family=Paytone+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
@@ -31,84 +32,57 @@
     <section id="servicios" class="cntGeneral bg-pattern">
 
 		<h2 class="title">Servicios</h2>
-        <div class="text">
-            <p class="textAlt">Durante nuestras larga trayectoria fuimos brindando diferentes servicios generalizados. Ahora podes personalizarlos!! 
-            Incorporamos nuestra seccion de servicios a gusto y eleccion de cada persona!! Te ayudamos a personalizar tus festejos.
-            <br>
-            Recorda, antes de realizar el pedido, tener en cuenta nuestras recomendaciones: </p>
-            <ol class="list">
-                <li>Tipo de evento</li>
-                <li>Servicio a contratar</li>
-                <li>Cantidad de personas</li>
-                <li>Tematica y ambientacion</li>
-                <li>Ingredientes o sabores preferidos</li>
-            </ol>
+
+        <div class="cards">
+            <div class="card" style="width: 18rem;">
+                <div class="card-img-top imgBox box1"></div>
+                <div class="card-body">
+                <h5 class="card-title bakeryCardTitle">Tortas Tematicas</h5>
+                <p class="card-text bakeryCardText">Tortas de diseño, elaboradas artesanalmente, con pasión y cuidado en cada detalle.</p>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <div class="card-img-top imgBox box2"></div>
+                <div class="card-body">
+                <h5 class="card-title bakeryCardTitle">Mesas Dulces</h5>
+                <p class="card-text bakeryCardText">Cumpleaños Infantiles, Bodas, 15 años, Bautismo, Comunión, Despedidas y todo tipo de Eventos.</p>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <div class="card-img-top imgBox box3"></div>
+                <div class="card-body">
+                <h5 class="card-title bakeryCardTitle">Box Cumpleaños</h5>
+                <p class="card-text bakeryCardText">Divertidas cajas con productos surtidos elegidos por vos. Desayunos y meriendas divertidas para festejar tu dia mas importante.</p>
+                </div>
+            </div>
         </div>
+        <div class="cards">
+            <div class="card" style="width: 18rem;">
+                <div class="card-img-top imgBox box4"></div>
+                <div class="card-body">
+                <h5 class="card-title bakeryCardTitle">Galletas Personalizadas</h5>
+                <p class="card-text bakeryCardText">Personalizamos galletas de cualquier tematica, con logos, inscripciones, animales y objetos de todo tipo</p>
+                </div>
+            </div>
 
-        <br>
+            <div class="card" style="width: 18rem;">
+                <div class="card-img-top imgBox box5"></div>
+                <div class="card-body">
+                <h5 class="card-title bakeryCardTitle">Number Cake</h5>
+                <p class="card-text bakeryCardText">Las tan deseadas tortas numericas para tu cumple!! Elegilas de vainilla o chocolate, con dulce de leche o crema pastelera!</p>
+                </div>
+            </div>
 
-        <table class="table" width="80%" cellpadding="2px" cellspacing="0">
-            <tr class="table-tr_title">
-                <th class="table-th">Servicios</th>
-                <th class="table-th">Descripcion</th>
-                <th class="table-th">Productos mas pedidos</th>
-            </tr>
-    
-            <tr class="table-tr">
-                <td class="table-td">Tortas Tematicas</td>
-                <td class="table-td">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor optio iusto pariatur, officiis </td>
-                <td class="table-td">
-                    <ul class="listAlt">
-                        <li>Minicake</li>
-                        <li>Cake 2 niveles</li>
-                        <li>Cake 3kg</li>
-                        <li>Cake 5kg</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr class="table-tr">
-                <td class="table-td">Mesas Dulces</td>
-                <td class="table-td">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor optio iusto pariatur, officiis </td>
-                <td class="table-td">
-                    <ul class="listAlt">
-                        <li>Lemon Pie</li>
-                        <li>Cheescake</li>
-                        <li>Key Lime Pie</li>
-                        <li>Chocotorta</li>
-                        <li>Tiramisu</li>
-                    </ul>
-                </td>
-            </tr>
-    
-            <tr class="table-tr">
-                <td class="table-td">Box Cumpleaños</td>
-                <td class="table-td">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor optio iusto pariatur, officiis </td>
-                <td class="table-td">
-                    <ul class="listAlt">
-                        <li>Box Desayuno Salado</li>
-                        <li>Box Desayuno Dulce</li>
-                        <li>Box Mini Tortas</li>
-                        <li>Box Donas</li>
-                    </ul>
-                </td>
-            </tr>
-    
-            <tr class="table-tr">
-                <td class="table-td">Galletas Personalizadas</td>
-                <td class="table-td">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor optio iusto pariatur, officiis </td>
-                <td class="table-td">
-                    <ul class="listAlt">
-                        <li>Vainilla y Coco</li>
-                        <li>Cholate con chips blancos</li>
-                        <li>Limon</li>
-                        <li>Frutilla</li>
-                        <li>Rellenas</li>
-                    </ul>
-                </td>
-            </tr>
-
-        </table>
-
+            <div class="card" style="width: 18rem;">
+                <div class="card-img-top imgBox box6"></div>
+                <div class="card-body">
+                <h5 class="card-title bakeryCardTitle">Candy Bar</h5>
+                <p class="card-text bakeryCardText">Ideal surtido de galletitas, cake pops, mini cakes, tarteletitas dulces y galletitas personalizadas para los eventos más delicados y super detallistas!</p>
+                </div>
+            </div>
+        </div>
 	</section>
 
 	<footer class="cntFooter">
