- Rediseno de pagina de Contacto: * Se agrego card con info de email y ubicacion, sumando iconos para cada uno * Agregado de imagen de fondo superior * Cambio en los enlaces de redes sociales y nuevas animaciones * Se elimino el formulario de contacto
- Agregue favicon

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,7 @@ font-family: 'Open Sans', sans-serif;
  Paleta de colores:
     Rojo: #A62E44;
     Gris: #514C57;
+    gris claro: #514c579a;
     Rosa: #F2A7BB;
     Celeste: #41CAD9;
     Amarillo: #FFFF9C
@@ -212,6 +213,10 @@ h3, legend{
     font-size: 2em;
     text-shadow: 2px 2px 10px rgba(27, 16, 31, 0.856);
     text-align: center;
+}
+
+.textBold {
+    font-weight: bold;
 }
 
 .bg-pattern {
@@ -516,24 +521,121 @@ h3, legend{
 
 /* Seccion Contacto */
 
-fieldset {
-    padding: 20px;
+.cntContacto {
+    padding-top: 250px;
+    background-image: url(../images/contactBg.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.contactCard {
+    min-width: 800px;
+    background-color: white;
+    border-radius: .25rem;
+    border: 1px solid rgba(0,0,0,.125);
+}
+
+.contactCard__title {
+    display: flex;
+    justify-content: center;
     width: 100%;
+    font-size: 25px;
 }
 
-.legend {
-    padding: 0 10px;
+.contactCard__section {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    gap: 20px;
+    align-items: center;
+    padding: 35px 0;
 }
 
-input[type=text], select, textarea {
+.contactCard__item {
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    letter-spacing: 1px;
+    align-items: center;
 }
 
-label {
-    font-weight: bold;
-    color: #A62E44;
-    margin-bottom: 5px;
+.contactCard__icon {
+    height: 40px;
+    width: 40px;
+    fill: #514c57d3;
 }
+
+.contactCard__icon:hover {
+    fill: #F2A7BB;
+    transition: all cubic-bezier(0.68, -0.55, 0.265, 1.55) .5s;
+}
+
+
+.contactCard__info {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.contactCard__iconTitle {
+    font-size: 25px;
+}
+
+.contactCard__detail {
+    color: #514c579a;
+    font-size: 18px;
+}
+
+.contactCard__contacts{
+    font-size: 25px;
+}
+
+.contactCard__Smedia {
+    display: flex;
+}
+
+.contactCard__Smedia .contactCard__SMicon {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px dashed gray;
+    background-clip: content-box;
+    padding: 4px;
+    transition: .5s;
+    align-items: center;
+    justify-content: center;
+    margin-right: 10px;
+}
+
+.contactCard__Smedia .contactCard__SMicon:hover {
+    padding: 6px;
+    transform: rotate(360deg);
+}
+
+.contactCard__Smedia .contactCard__SMicon svg {
+    fill: #ffffff;
+    width: 18px;
+}
+
+.contactCard__Smedia .contactCard__SMicon.whatsapp {
+    background: #00e676;
+    background-clip: content-box;
+}
+
+.contactCard__Smedia .contactCard__SMicon.instagram {
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 05%, #fd5949 60%,#d6249f 90%);
+    background-clip: content-box;
+}
+
+.contactCard__Smedia .contactCard__SMicon.twitter {
+    background-color: #00ACEE;
+}
+
+.contactCard__Smedia .contactCard__SMicon.facebook {
+    background-color: #3B5998;
+}
+  
+  
+  
+  
+  
