--- a/views/contacto.html
+++ b/views/contacto.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Mr+De+Haviland&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300&family=Paytone+One&display=swap" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="../assets/style.css">
+	<link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
 	<title>Bakery Bake</title>
 </head>
 
@@ -29,69 +30,58 @@
 		</div>
 	</header>
     
-    <section id="contacto" class="cntGeneral bg-pattern">
+    <section id="contacto" class="cntGeneral cntContacto">
+
+		<!-- card -->
+		<div class="contactCard">
+			<div class="contactCard__section contactCard__title">
+				<h2>Contactanos</h2>
+			</div>
+			<div class="contactCard__section">
+				<div class="contactCard__item">
+					<div class="contactCard__icon">
+						<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><g><g><path d="M467,61H45C20.218,61,0,81.196,0,106v300c0,24.72,20.128,45,45,45h422c24.72,0,45-20.128,45-45V106C512,81.28,491.872,61,467,61z M460.786,91L256.954,294.833L51.359,91H460.786z M30,399.788V112.069l144.479,143.24L30,399.788zM51.213,421l144.57-144.57l50.657,50.222c5.864,5.814,15.327,5.795,21.167-0.046L317,277.213L460.787,421H51.213z M482,399.787L338.213,256L482,112.212V399.787z"/></g></g></svg>
+
+					</div>
+					<div class="contactCard__info">
+						<div class="contactCard__iconTitle textBold">Pedidos</div>
+						<div class="contactCard__detail ">pedidos@bakerybake.com</div>
+					</div>
+				</div>
+				<div class="contactCard__item">
+					<div class="contactCard__icon"> 
+						<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><g><g><path d="M256,0C156.748,0,76,80.748,76,180c0,33.534,9.289,66.26,26.869,94.652l142.885,230.257c2.737,4.411,7.559,7.091,12.745,7.091c0.04,0,0.079,0,0.119,0c5.231-0.041,10.063-2.804,12.75-7.292L410.611,272.22C427.221,244.428,436,212.539,436,180C436,80.748,355.252,0,256,0z M384.866,256.818L258.272,468.186l-129.905-209.34C113.734,235.214,105.8,207.95,105.8,180c0-82.71,67.49-150.2,150.2-150.2S406.1,97.29,406.1,180C406.1,207.121,398.689,233.688,384.866,256.818z"/></g></g><g><g><path d="M256,90c-49.626,0-90,40.374-90,90c0,49.309,39.717,90,90,90c50.903,0,90-41.233,90-90C346,130.374,305.626,90,256,90zM256,240.2c-33.257,0-60.2-27.033-60.2-60.2c0-33.084,27.116-60.2,60.2-60.2s60.1,27.116,60.1,60.2C316.1,212.683,289.784,240.2,256,240.2z"/></g></g></svg>
+					</div>
+					<div class="contactCard__info">
+						<div class="contactCard__iconTitle textBold">Encontranos</div>
+						<div class="contactCard__detail">348 Happy Street, Rosario</div>
+					</div>
+				</div>
+			</div>
+			<div class="contactCard__section">
+				<span class="contactCard__contacts textBold">Conectanos en:</span>
+				<div class="contactCard__Smedia">
+					<a href="https://whatsapp.com" class="contactCard__SMicon whatsapp" target="_blank">
+						<svg id="Bold" enable-background="new 0 0 24 24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m17.507 14.307-.009.075c-2.199-1.096-2.429-1.242-2.713-.816-.197.295-.771.964-.944 1.162-.175.195-.349.21-.646.075-.3-.15-1.263-.465-2.403-1.485-.888-.795-1.484-1.77-1.66-2.07-.293-.506.32-.578.878-1.634.1-.21.049-.375-.025-.524-.075-.15-.672-1.62-.922-2.206-.24-.584-.487-.51-.672-.51-.576-.05-.997-.042-1.368.344-1.614 1.774-1.207 3.604.174 5.55 2.714 3.552 4.16 4.206 6.804 5.114.714.227 1.365.195 1.88.121.574-.091 1.767-.721 2.016-1.426.255-.705.255-1.29.18-1.425-.074-.135-.27-.21-.57-.345z"/><path d="m20.52 3.449c-7.689-7.433-20.414-2.042-20.419 8.444 0 2.096.549 4.14 1.595 5.945l-1.696 6.162 6.335-1.652c7.905 4.27 17.661-1.4 17.665-10.449 0-3.176-1.24-6.165-3.495-8.411zm1.482 8.417c-.006 7.633-8.385 12.4-15.012 8.504l-.36-.214-3.75.975 1.005-3.645-.239-.375c-4.124-6.565.614-15.145 8.426-15.145 2.654 0 5.145 1.035 7.021 2.91 1.875 1.859 2.909 4.35 2.909 6.99z"/></svg>
+					</a>
+					<a href="https://instagram.com" class="contactCard__SMicon instagram" target="_blank">
+						<svg id="Bold" enable-background="new 0 0 24 24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m12.004 5.838c-3.403 0-6.158 2.758-6.158 6.158 0 3.403 2.758 6.158 6.158 6.158 3.403 0 6.158-2.758 6.158-6.158 0-3.403-2.758-6.158-6.158-6.158zm0 10.155c-2.209 0-3.997-1.789-3.997-3.997s1.789-3.997 3.997-3.997 3.997 1.789 3.997 3.997c.001 2.208-1.788 3.997-3.997 3.997z"/><path d="m16.948.076c-2.208-.103-7.677-.098-9.887 0-1.942.091-3.655.56-5.036 1.941-2.308 2.308-2.013 5.418-2.013 9.979 0 4.668-.26 7.706 2.013 9.979 2.317 2.316 5.472 2.013 9.979 2.013 4.624 0 6.22.003 7.855-.63 2.223-.863 3.901-2.85 4.065-6.419.104-2.209.098-7.677 0-9.887-.198-4.213-2.459-6.768-6.976-6.976zm3.495 20.372c-1.513 1.513-3.612 1.378-8.468 1.378-5 0-7.005.074-8.468-1.393-1.685-1.677-1.38-4.37-1.38-8.453 0-5.525-.567-9.504 4.978-9.788 1.274-.045 1.649-.06 4.856-.06l.045.03c5.329 0 9.51-.558 9.761 4.986.057 1.265.07 1.645.07 4.847-.001 4.942.093 6.959-1.394 8.453z"/><circle cx="18.406" cy="5.595" r="1.439"/></svg>
+					</a>
+					<a href="https://facebook.com" class="contactCard__SMicon facebook" target="_blank">
+						<svg id="Bold" enable-background="new 0 0 24 24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m15.997 3.985h2.191v-3.816c-.378-.052-1.678-.169-3.192-.169-3.159 0-5.323 1.987-5.323 5.639v3.361h-3.486v4.266h3.486v10.734h4.274v-10.733h3.345l.531-4.266h-3.877v-2.939c.001-1.233.333-2.077 2.051-2.077z"/></svg>
+					</a>
+					<a href="https://twitter.com" class="contactCard__SMicon twitter" target="_blank">
+						<svg id="Bold" enable-background="new 0 0 24 24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m21.534 7.113c.976-.693 1.797-1.558 2.466-2.554v-.001c-.893.391-1.843.651-2.835.777 1.02-.609 1.799-1.566 2.165-2.719-.951.567-2.001.967-3.12 1.191-.903-.962-2.19-1.557-3.594-1.557-2.724 0-4.917 2.211-4.917 4.921 0 .39.033.765.114 1.122-4.09-.2-7.71-2.16-10.142-5.147-.424.737-.674 1.58-.674 2.487 0 1.704.877 3.214 2.186 4.089-.791-.015-1.566-.245-2.223-.606v.054c0 2.391 1.705 4.377 3.942 4.835-.401.11-.837.162-1.29.162-.315 0-.633-.018-.931-.084.637 1.948 2.447 3.381 4.597 3.428-1.674 1.309-3.8 2.098-6.101 2.098-.403 0-.79-.018-1.177-.067 2.18 1.405 4.762 2.208 7.548 2.208 8.683 0 14.342-7.244 13.986-14.637z"/></svg>
+					</a>
+				</div>
+			</div>
+
+
+
+
+		</div>
+
 		
-		<h2 class="title">Contactanos</h2>
-
-		<p>email@bakerybake.com</p>
-		<p>+54 0341 153267065</p>
-		<p>267 Happy Street, Buenos Aires,Argentina</p>
-
-
-		<h3>Nuestros Horarios</h3>
-		<p>Lunes - Viernes: 9AM - 8PM</p>
-		<p>Sabados: 10AM - 7PM</p>
-		<p>Domingos: 10AM - 12PM</p>
-
-		<h3>Seguinos</h3>
-		<!-- iconos de redes con fontawesome -->
-
-		<h3>Medios de Pago</h3>
-		<!-- iconos con fontawesome -->
-
-        <br>
-        <br>
-        <br>
-        <form action="enviar.php" method="POST" enctype="multipart/form-data">
-            <fieldset>
-                <legend class="legend">Envia Tu Consulta</legend>
-                <label for="name">Nombre y Apellido</label>
-                <input type="text" name="nombreyapellido" maxlength="100"/>	
-
-                <br>
-                <br>    
-
-                <label for="email">Email</label>
-                <input type="text" name="email" maxlength="100"/>
-                
-                <br>
-                <br>
-                <label for="info">Quiero saber mas sobre:</label>
-                <select name="info">
-                    <option value="-">-</option>
-                    <option value="productos">Productos</option>
-                    <option value="servicios-especiales">Servicios Especiales</option>
-                    <option value="Otros">Otros</option>
-                </select>
-
-                <br>
-                <br>
-
-                <label for="comment">Dejanos tu comentario</label>
-                <textarea name="comment"></textarea>
-                
-                <br>
-                <br>
-    
-                <input type="checkbox" name="autorindependiente" value="1">
-                <span>Quiero recibir mas informacion</span>
-            
-    
-                <br>
-                <br>
-                <input type="reset" name="reset" value="Limpiar">
-                <input type="submit" name="submit" value="Enviar">
-            </fieldset>
 	</section>
     
 	<footer class="cntFooter">
