- Agregue formulario de contacto

--- a/assets/style.css
+++ b/assets/style.css
@@ -569,7 +569,6 @@ h3, legend{
     transition: all cubic-bezier(0.68, -0.55, 0.265, 1.55) .5s;
 }
 
-
 .contactCard__info {
     display: flex;
     align-items: center;
@@ -635,7 +634,47 @@ h3, legend{
     background-color: #3B5998;
 }
   
+
+/* Formulario de contacto */
+
+.formCnt {
+    padding: 50px 450px;
+
+}
+
+.formCnt__card {
+    padding: 30px;
+}
+
+.formCnt__card .row {
+    padding-bottom: 10px;
+}
+
+.formCnt__card .form-control,
+.formCnt__card .form-check-input {
+    transition: border-color cubic-bezier(0.755, 0.05, 0.855, 0.06) .25s;
+}
+
+.formCnt__card .form-control:focus,
+.formCnt__card .form-check-input:focus {
+    border-color: #F2A7BB;
+    box-shadow: none;
+}
   
+.formCnt__card .form-check-input:checked {
+    background-color: #F2A7BB;
+    border-color: #F2A7BB;
+}
   
-  
-  
+.formCnt__card .btn-primary {
+    background-color: #F2A7BB;
+    border-color: #F2A7BB;
+}
+
+.formCnt__card .btn-primary:focus {
+    box-shadow: none;
+}
+
+.formCnt__card .btn-primary:active {
+    background-color: #f2a7bbbe;
+}
