--- a/views/contacto.html
+++ b/views/contacto.html
@@ -75,13 +75,51 @@
 					</a>
 				</div>
 			</div>
-
-
-
-
 		</div>
+	</section>
+	<section id="formularioContacto" class="formCnt">
+		<div class="contactCard formCnt__card">
+			<div class="row">
+				<div class="col">
+				  <input type="text" class="form-control" placeholder="Nombre" aria-label="name">
+				</div>
+				<div class="col">
+					<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<input type="text" name="phone" class="form-control"  placeholder="Telefono">
+				</div>
+				<div class="col">
+					<input type="text" class="form-control" placeholder="Asunto" aria-label="subject">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<textarea class="form-control" id="exampleFormControlTextarea1"  placeholder="Mensaje" rows="3"></textarea>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<div class="form-check">
+						<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+						<label class="form-check-label" for="flexCheckDefault">
+						  Deseo recibir promociones en mi casilla de correo
+						</label>
+					</div>
+				</div>
+			</div>
+			<button type="submit" class="btn btn-primary">Submit</button>
+		</div>	
+	</section>
+	<section>
+		<div id="map"></div>
 
-		
+		<script
+			src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&libraries=&v=weekly"
+			async>
+		</script>
 	</section>
     
 	<footer class="cntFooter">
