-Alique SASS en secciones: Contacto-Promos-Productos -Se aplico metodologia BEM en dichas secciones, reemplazando nombre de clases para mayor claridad.
-Agregue favicon a todas las secciones

--- a/views/productos.html
+++ b/views/productos.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Mr+De+Haviland&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300&family=Paytone+One&display=swap" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/style.css">
+	<link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
 	<title>Productos</title>
 </head>
 
@@ -34,39 +35,39 @@
 	</section>
 
 	<section>
-		<div class="gridContainer">
-			<div class="gridItem gridItem1">
-				<div class="imgItem imgItem1">
+		<div class="prodGrid">
+			<div class="prodGrid__item gridItem1">
+				<div class="prodGrid__img imgItem1">
 					<div class="itemName">Tortas</div>
 				</div>
 			</div>
 
-			<div class="gridItem gridItem2">
-				<div class="imgItem imgItem2">
+			<div class="prodGrid__item gridItem2">
+				<div class="prodGrid__img imgItem2">
 					<div class="itemName">Macarons</div>
 				</div>
 			</div>
 
-			<div class="gridItem gridItem3">
-				<div class="imgItem imgItem3">
+			<div class="prodGrid__item gridItem3">
+				<div class="prodGrid__img imgItem3">
 					<div class="itemName">Cupcakes</div>
 				</div>
 			</div>
 
-			<div class="gridItem gridItem4">
-				<div class="imgItem imgItem4">
+			<div class="prodGrid__item gridItem4">
+				<div class="prodGrid__img imgItem4">
 					<div class="itemName">Tartas</div>
 				</div>
 			</div>
 
-			<div class="gridItem gridItem5">
-				<div class="imgItem imgItem5">
+			<div class="prodGrid__item gridItem5">
+				<div class="prodGrid__img imgItem5">
 					<div class="itemName">Donas</div>
 				</div>
 			</div>
 
-			<div class="gridItem gridItem6">
-				<div class="imgItem imgItem6">
+			<div class="prodGrid__item gridItem6">
+				<div class="prodGrid__img imgItem6">
 					<div class="itemName">Cake Pops</div>
 				</div>
 			</div>
