--- a/assets/offers.scss
+++ b/assets/offers.scss
@@ -1,74 +1,69 @@
 /* Seccion Promos */
-
-#promos {
-    background-image: linear-gradient(rgba(255,255,255,0.93), rgba(255,255,255,.93)), 
-    url(../images/pattern.jpg);
-}
-
-.cntPromos {
+.offers {
     display: flex;
     flex-direction: column;
-}
 
-.cntPromos-Title {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+    &__title {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    &__cards {
+        display: flex;
+        flex-flow: row;
+        justify-content: space-around;
+        order: inherit;
 
-.cntPromos-Cards {
-    display: flex;
-    flex-flow: row;
-    justify-content: space-around;
-    order: inherit;
-}
+        .box {
+            width: 30%;
+            height: 450px;
 
-.boxCard {
-    width: 30%;
-    height: 450px;
-}
-.boxImg {
-    border-radius: 5%;
-    display: flex;
-    width: 100%;
-    height: 330px;
-    background-position: center;
-    background-size: cover;
-}
+            &__img {
+                border-radius: 5%;
+                display: flex;
+                width: 100%;
+                height: 330px;
+                background-position: center;
+                background-size: cover;
+            }
+            
+            &__title {
+                width: 100%;
+                background-color: #A62E44;
+                height: 45px;    
+                color: #dedede;
+                font-size: 20px;
+                font-weight: bold;
+                margin-top: 250px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
 
-.promo1 {
-    background-image: url(../images/promo1.jpg);
-}
-
-.promo2 {    
-    background-image: url(../images/promo2.jpg);
-}
-
-.promo3 {
-    background-image: url(../images/promo3.jpg);
-}
-
-.boxTitle {
-    width: 100%;
-    background-color: #A62E44;
-    height: 45px;    
-    color: #dedede;
-    font-size: 20px;
-    font-weight: bold;
-    margin-top: 250px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.boxDescription {
-    align-content: center;
-    display: flex;
-    justify-content: center;
-    margin: 20px;
-    text-align: center;
-}
-
-.boxDescription:hover {
-    color: #F2A7BB;
+            &__description {
+                align-content: center;
+                display: flex;
+                justify-content: center;
+                margin: 20px;
+                text-align: center;
+                
+                &:hover {
+                    color: #F2A7BB;
+                }
+            }
+            
+            .promo1 {
+                background-image: url(../images/promo1.jpg);
+            }
+            
+            .promo2 {    
+                background-image: url(../images/promo2.jpg);
+            }
+            
+            .promo3 {
+                background-image: url(../images/promo3.jpg);
+            }
+        }
+    }
 }
