--- a/views/promos.html
+++ b/views/promos.html
@@ -8,6 +8,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Mr+De+Haviland&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300&family=Paytone+One&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+	<link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
 	<title>Promos</title>
 </head>
 
@@ -28,42 +29,42 @@
 		</div>
 	</header>
     
-    <section id="promos" class="cntGeneral bg-pattern">
-		<div class="cntPromos">
-			<div class="cntPromos-Title">
+    <section class="cntGeneral bg-pattern">
+		<div class="offers">
+			<div class="offers__title">
 				<h2 class="title">Nuestras Promos</h2>
 			</div>
 
-			<div class="cntPromos-Cards">
-				<div class="boxCard">
-					<div class="boxImg promo1">
-						<div class="boxTitle">
+			<div class="offers__cards">
+				<div class="box">
+					<div class="box__img promo1">
+						<div class="box__title">
 							20% DESCUENTO
 						</div>
 					</div>
-					<div class="boxDescription text">
+					<div class="box__description text">
 						Galletas navideñas sabor limon x 12 unidades
 					</div>
 				</div>
 			
-				<div class="boxCard">
-					<div class="boxImg promo2">
-						<div class="boxTitle">
+				<div class="box">
+					<div class="box__img promo2">
+						<div class="box__title">
 							LLEVA 12 PAGA 10
 						</div>
 					</div>
-					<div class="boxDescription text">
+					<div class="box__description text">
 						Alfajores de dulce de leche bañados en chocolate
 					</div>
 				</div>
 
-				<div class="boxCard">
-					<div class="boxImg promo3">
-						<div class="boxTitle">
+				<div class="box">
+					<div class="box__img promo3">
+						<div class="box__title">
 							30% DESCUENTO
 						</div>
 					</div>
-					<div class="boxDescription text">
+					<div class="box__description text">
 						Mini tarteletas con frutas de estacion
 					</div>
 				</div>
