--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -11,8 +11,17 @@
 
 $colorRed: #A62E44;
 $colorGray: #514C57;
+$colorGray2: #514c57d3;
 $colorGrayLight: #514c579a;
+$colorGrayTransparent: #514c5799;
 $colorPink: #F2A7BB;
+$colorPinkLight: #f2a7bbbe;
 $colorBlueLight: #41CAD9;
+$colorTwitter: #00ACEE;
 $colorYellow: #FFFF9C;
+$colorWhitePure: #ffffff;
 $colorWhite: #F7FFF4;
+$colorBeige: #dedede;
+$colorBlack: #00000020;
+$colorWhatsApp: #00e676;
+$colorFacebook: #3B5998;
