--- a/assets/products.scss
+++ b/assets/products.scss
@@ -1,3 +1,4 @@
+@import url(./variables.scss);
 /* Seccion Productos */
 
 .prodGrid {
@@ -11,15 +12,15 @@
     width: 100%;
 
     &__item {
-        background-color: #000000;
+        background-color: $colorBlack;
         margin: 0;
         padding: 0;
         min-height: 550px;
         overflow: hidden;
         
         .itemName {
-            color: #ffffff;
-            border: 5px solid #ffffff;
+            color: $colorWhitePure;
+            border: 5px solid $colorWhitePure;
             padding: 20px 35px;
             font-size: 40px;
             font-weight: bold;
